# web-service-files-axum

./: Cargo.toml  Containerfile  Makefile  README.md  llms.json  llms.txt
etc/init.d/: web-service-files-axum.sh
etc/systemd/system/: web-service-files-axum.service
files/: index.html  index.json
src/: app.rs  conf.rs  main.rs
